# feedparser-sgmllib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yaml  test.yaml
docs/: conf.py  copyright.rst  index.rst  license.rst  sgmllib.rst
requirements/: README.rst
requirements/docs/: requirements.txt
requirements/mypy/: requirements.txt
requirements/test/: requirements-coverage.txt  requirements.txt
src/feedparser/sgmllib/: __init__.py
tests/: conftest.py  test_sgmllib.py
