[project]
name = "feedparser-sgmllib"
description = "sgmllib from Python 2.7. For feedparser use only."
version = "1.0.0"
readme = "README.rst"
requires-python = ">=3.10"
license = "PSF-2.0"

[project.urls]
Source = "https://github.com/python-syndication/feedparser-sgmllib"
Documentation = "https://feedparser-sgmllib.readthedocs.io"
Changelog = "https://feedparser-sgmllib.readthedocs.io/en/latest/changelog/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
packages = [
    { include = "feedparser", from = "src" }
]


# coverage
# --------

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "feedparser.sgmllib",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 75


# flake8
# ------

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]


# isort
# -----

[tool.isort]
profile = "black"
force_single_line = true


# mypy
# ----

[tool.mypy]
packages = "feedparser.sgmllib"
strict = true
sqlite_cache = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_unreachable = true


# pytest
# ------

[tool.pytest]
addopts = [
    "--color=yes",
]
filterwarnings = [
    "error",
]
strict = true
